--- a/example/css/example.css
+++ b/example/css/example.css
@@ -97,6 +97,12 @@ div {
   overflow-y: auto; 
 }
 
+#add-items_1 {
+  display: none;
+  padding: 20px;
+  overflow-y: auto; 
+}
+
 #main-controls {
   position: absolute;
   top: 20px;
@@ -133,6 +139,10 @@ div {
 }
 
 .add-item {
+  cursor: pointer;
+}
+
+.add-item_1 {
   cursor: pointer;
 }
 
