--- a/example/css/example.css
+++ b/example/css/example.css
@@ -103,6 +103,12 @@ div {
   overflow-y: auto; 
 }
 
+#add-items_2 {
+  display: none;
+  padding: 20px;
+  overflow-y: auto; 
+}
+
 #main-controls {
   position: absolute;
   top: 20px;
@@ -143,6 +149,10 @@ div {
 }
 
 .add-item_1 {
+  cursor: pointer;
+}
+
+.add-item_2 {
   cursor: pointer;
 }
 
