--- a/example/css/example.css
+++ b/example/css/example.css
@@ -117,9 +117,10 @@ div {
 }
 
 #main-controls h3 {
-  text-align: right; 
-  margin-top: 20px;
-  color: #ff0000;
+  position:relative; 
+  top: 20px;
+  left: 20px;
+  color: red;
   font-style: italic;
 }
 
