--- a/example/css/example.css
+++ b/example/css/example.css
@@ -116,6 +116,10 @@ div {
   padding: 0;  
 }
 
+.mcright {
+    text-align: right;
+    float: right;
+}
 
 #camera-controls {
   position: absolute;
