--- a/example/css/example.css
+++ b/example/css/example.css
@@ -117,7 +117,9 @@ div {
 }
 
 .mcright {
+    display: inline-block;
     position: relative;
+    float: right;
     top: 20px;
     right: 0;
     text-align: right;
