--- a/example/css/example.css
+++ b/example/css/example.css
@@ -117,9 +117,9 @@ div {
 }
 
 .mcright {
-    position: relative;
+    position: absolute;
     top: 20px;
-    right: -200px;
+    right: 0;
     text-align: right;
 }
 
