--- a/example/css/example.css
+++ b/example/css/example.css
@@ -232,3 +232,10 @@ div {
     font-size: 20px;
     color: red;
 }
+
+.fontkaushanzoom {
+    font-family: 'Kaushan-script';
+    font-size: 300%;
+    color: white;
+    text-align: center;
+}
