--- a/example/css/bootstrap.css
+++ b/example/css/bootstrap.css
@@ -3509,12 +3509,24 @@ fieldset[disabled] .btn-link:focus {
   display: block;
   width: 100%;
 }
+.btn-block2 {
+  display: block;
+  width: 100%;
+}
 .btn-block + .btn-block {
+  margin-top: 5px;
+}
+.btn-block2 + .btn-block2 {
   margin-top: 5px;
 }
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
+  width: 100%;
+}
+input[type="submit"].btn-block2,
+input[type="reset"].btn-block2,
+input[type="button"].btn-block2 {
   width: 100%;
 }
 .fade {
@@ -6006,6 +6018,9 @@ button.close {
   margin-left: -1px;
 }
 .modal-footer .btn-block + .btn-block {
+  margin-left: 0;
+}
+.modal-footer .btn-block2 + .btn-block2 {
   margin-left: 0;
 }
 .modal-scrollbar-measure {
