--- a/example/css/bootstrap.css
+++ b/example/css/bootstrap.css
@@ -3512,12 +3512,14 @@ fieldset[disabled] .btn-link:focus {
 .btn-block2 {
   display: block;
   width: 100%;
+  margin:0;
+  padding:0;
 }
 .btn-block + .btn-block {
   margin-top: 5px;
 }
 .btn-block2 + .btn-block2 {
-  margin-top: 5px;
+  margin-top: 0px;
 }
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
