--- a/example/css/bootstrap.css
+++ b/example/css/bootstrap.css
@@ -5062,7 +5062,7 @@ a.badge:focus {
 .thumbnail {
   display: block;
   padding: 4px;
-  margin-bottom: 20px;
+  margin-bottom: 2px;  /*inizialmente era 20px */
   line-height: 1.42857143;
   background-color: #fff;
   border: 1px solid #ddd;
