--- a/example/css/bootstrap.css
+++ b/example/css/bootstrap.css
@@ -5062,7 +5062,19 @@ a.badge:focus {
 .thumbnail {
   display: block;
   padding: 4px;
-  margin-bottom: 2px;  /*inizialmente era 20px */
+  margin-bottom: 2px;  /*inizialmente era 20px poi ho cambiato a 2px */
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: border .2s ease-in-out;
+       -o-transition: border .2s ease-in-out;
+          transition: border .2s ease-in-out;
+}
+.thumbnailold {
+  display: block;
+  padding: 4px;
+  margin-bottom: 20px;
   line-height: 1.42857143;
   background-color: #fff;
   border: 1px solid #ddd;
